# rinia

./: Cargo.toml  README.md
src/: lib.rs
src/algebra/: casting.rs  equality.rs  identities.rs  impl_equality.rs  interpolation.rs  macros.rs  mod.rs  operations.rs  predicates.rs  tests.rs
src/common/: macros.rs  macros_bytemuck.rs  macros_field_access.rs  macros_tuple_casts_forward.rs  macros_tuple_core_forward.rs  macros_tuple_numeric_forward.rs  macros_tuple_ops_forward.rs  mod.rs
src/core/: mod.rs
src/numeric/: arithmetic.rs  casting.rs  constants.rs  elementary.rs  impl_casts.rs  macros.rs  mod.rs  predicates.rs  properties.rs  rounding.rs  tests.rs
src/ops/: macros.rs  mod.rs  traits.rs
src/quaternion/: impl_access.rs  impl_algebra.rs  impl_basic.rs  impl_compat_mint.rs  impl_core.rs  impl_equality.rs  impl_numeric.rs  impl_ops.rs  interop.rs  mod.rs  tests.rs  traits.rs  types.rs
src/scalar/: float_compat.rs  forwarders.rs  impl_algebra.rs  impl_casts.rs  impl_common.rs  impl_core.rs  impl_f32.rs  impl_f64.rs  impl_float.rs  impl_int.rs  impl_markers.rs  impl_numeric.rs  macros.rs  macros_algebra.rs  macros_casting.rs  macros_float.rs  macros_int.rs  macros_numeric.rs  macros_scalar.rs  mod.rs  tests.rs  traits.rs  type_lists.rs  types.rs
src/tuple/: impl_access.rs  impl_casts.rs  impl_core.rs  impl_numeric.rs  impl_ops.rs  macros.rs  mod.rs  tests.rs  traits.rs  tuple_internal.rs  types.rs
src/vector/: impl_access.rs  impl_algebra.rs  impl_common.rs  impl_compat_mint.rs  impl_core.rs  impl_numeric.rs  impl_ops.rs  impl_vec2.rs  impl_vec3.rs  impl_vec4.rs  impl_vector2.rs  impl_vector3.rs  impl_vector4.rs  interop.rs  macros.rs  macros_arith.rs  macros_core.rs  macros_equality.rs  macros_ops.rs  mod.rs  tests.rs  traits.rs  types.rs
