[package]
name = "rinia"
version = "0.0.0"
publish = true
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/tailflare/rinia"
description = "Portable scalar abstractions for game and simulation math."
include = ["src/**", "README.md", "LICENSE*"]

[features]
default = ["std"]

std = ["zerocopy?/std"]

bytemuck = ["dep:bytemuck"]
zerocopy = ["dep:zerocopy"]

_all_optional = ["bytemuck", "zerocopy"]

[dependencies]
core_maths = "0.1.1"

approx = { version = "0.5.1", default-features = false }

bytemuck = { version = "1.25.0", optional = true, default-features = false }

zerocopy = { version = "0.8.52", optional = true, default-features = false, features = [
    "derive",
] }
