[package]
name = "rinia"
version = "0.0.7"
publish = true
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/tailflare/rinia"
description = "Portable scalar abstractions for game and simulation math."
include = ["src/**", "README.md", "LICENSE*"]

[features]
default = ["std"]

std = ["zerocopy?/std"]

bytemuck = ["dep:bytemuck"]
zerocopy = ["dep:zerocopy"]
mint = ["dep:mint"]

_all_optional = ["bytemuck", "zerocopy", "mint"]

[dependencies]
libm = { version = "0.2.16", default-features = false }
approx = { version = "0.5.1", default-features = false }

pastey = "0.2.3"

bytemuck = { version = "1.25.0", optional = true, default-features = false }
zerocopy = { version = "0.8.52", optional = true, default-features = false, features = [
    "derive",
] }
mint = { version = "0.5.9", optional = true }
