[package]
name = "rinia"
version = "0.0.19"
publish = true
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/tailflare/rinia"
description = "Stable numeric foundations for graphics, animation, and simulation."
include = ["src/**", "README.md", "LICENSE*"]

[features]
default = ["std"]

std = ["sakka?/std", "zerocopy?/std"]
alloc = []

sakka = ["dep:sakka"]
bytemuck = ["dep:bytemuck"]
zerocopy = ["dep:zerocopy"]
mint = ["dep:mint"]


_all_optional = ["sakka", "bytemuck", "zerocopy", "mint"]

[dependencies]
libm = { version = "0.2.16", default-features = false }

sakka = { version = "0.0.20", optional = true, default-features = false, features = [
    "derive",
] }
bytemuck = { version = "1.25.2", optional = true, default-features = false, features = [
    "derive",
] }
zerocopy = { version = "0.8.55", optional = true, default-features = false, features = [
    "derive",
] }
mint = { version = "0.5.9", optional = true }
